# llm-gateway

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE  README.md  gateway.example.toml  mise.toml
.githooks/: commit-msg  pre-push
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  credentials.rs  lib.rs  main.rs  parser.rs  pkce.rs
crates/cli/src/cmd/: auth.rs  mod.rs
crates/cli/tests/: readme_cli.rs
crates/gateway/: Cargo.toml  build.rs
crates/gateway/examples/: dev_ui.rs  tool_token_budget.rs
crates/gateway/examples/demo-skills/commit-message-helper/: SKILL.md
crates/gateway/examples/demo-skills/release-notes-writer/: SKILL.md
crates/gateway/examples/demo-skills/release-notes-writer/references/: example.md
crates/gateway/examples/demo-skills/sql-query-explainer/: SKILL.md
crates/gateway/migrations/: 0001_init.sql  0002_sessions.sql  0003_pending_logins.sql  0004_timezone.sql  0005_chat_persistence.sql  0006_model_defaults.sql  0007_user_tool_prefs.sql  0008_user_memories.sql  0009_user_memories_kind.sql  0010_user_location.sql  0011_chat_shared.sql  0012_chat_session_tools.sql  0013_rag.sql  0014_rag_fts.sql  0015_rag_per_collection_store.sql  0016_rag_collection_refs.sql  0017_rag_multi_source.sql  0018_impersonation.sql  0019_token_tool_prefs.sql  0020_chat_session_skills.sql  0021_scheduled_actions.sql  0022_usage.sql  0023_user_mcp.sql  0024_session_settings.sql  0025_skill_role_grants.sql  0026_rag_index_log.sql  0027_documents.sql  0028_chat_pinned.sql  0029_scheduled_reuse.sql  0030_reasoning_budget.sql  README.md
crates/gateway/src/: build_info.rs  lib.rs  loop_guard.rs  main.rs  openai_driver.rs
crates/gateway/src/rama_server/: api.rs  auth.rs  cli_handlers.rs  mod.rs  oidc_handlers.rs  proxy.rs  rag_api.rs  router.rs  sandbox_api.rs  session.rs  state.rs  vad.rs
crates/gateway/src/rama_server/pages/: admin.rs  admin_users.rs  backends.rs  connectors.rs  feedback.rs  integrations.rs  memory.rs  mod.rs  rag.rs  scheduled.rs  skills.rs  tokens.rs  tool_toggles.rs  tools.rs  usage.rs
crates/gateway/src/rama_server/pages/chat/: mod.rs  render.rs  title.rs
crates/gateway/src/server/: chat_attachments.rs  config.rs  crypto.rs  embeddings.rs  mod.rs  model_defaults.rs  pdf.rs  reasoning.rs  skills.rs  state.rs  typst.rs
crates/gateway/src/server/auth/: mcp_oauth.rs  mod.rs  oidc.rs  token.rs
crates/gateway/src/server/db/: audit.rs  chat_session_settings.rs  chat_session_skills.rs  chat_session_tools.rs  cli_logins.rs  documents.rs  mcp_catalog.rs  mod.rs  model_defaults.rs  rag.rs  skill_grants.rs  token_tool_prefs.rs  tokens.rs  usage.rs  user_mcp.rs  user_memories.rs  user_tool_prefs.rs  users.rs
crates/gateway/src/server/geoip/: mod.rs  update.rs
crates/gateway/src/server/github/: mod.rs
crates/gateway/src/server/rag/: chunk.rs  git.rs  index.rs  mod.rs  walk.rs  worker.rs
crates/gateway/src/server/rbac/: config.rs  mod.rs  resolver.rs
crates/gateway/src/server/scheduled/: cron.rs  mod.rs  worker.rs
crates/gateway/src/server/tools/: catalog.rs  currency.rs  document.rs  echo.rs  enable_tools.rs  feedback.rs  fetch_attachment.rs  fetch_url.rs  json_patch.rs  location.rs  lookup_ip.rs  memory.rs  mod.rs  netcheck.rs  rag.rs  read_skill.rs  registry.rs  runner.rs  sandbox.rs  search_web.rs  text_edit.rs  time.rs  typst_render.rs  upload_attachment.rs  wikipedia.rs
crates/gateway/src/server/tools/mcp/: manager.rs  mod.rs  worker.rs
crates/gateway/src/server/upstreams/: config.rs  health.rs  mod.rs  registry.rs
crates/gateway/src/server/usage/: mod.rs
crates/gateway/tests/: admin_models.rs  admin_users.rs  chat_actions.rs  chat_attachment.rs  chat_fork.rs  chat_pin.rs  chat_sharing.rs  chat_stream.rs  healthz.rs  icon_smoke.rs  landing.rs  memory_page.rs  oidc_integration.rs  proxy.rs  rag.rs  rag_api.rs  rag_eval.rs  rag_page.rs  readme_routes.rs  sandbox_e2e_live.rs  scheduled.rs  session_routes.rs  sidebar_nav.rs  tool_loop.rs  tool_prefs.rs  transcriptions.rs  typst_compile.rs  ui_chrome.rs
crates/gateway/tests/common/: mod.rs
crates/sandbox-runner/: Cargo.toml
crates/sandbox-runner/src/: backend.rs  config.rs  isolation.rs  main.rs  pool.rs  server.rs
crates/session-core/: Cargo.toml
crates/session-core/assets/: app.css  app.js  pcm-recorder.js
crates/session-core/src/: assets.rs  attachments.rs  chat.rs  chrome.rs  db.rs  driver.rs  export.rs  icons.rs  lib.rs  render.rs  worker.rs  workers.rs
crates/session-core/ui/ts/: composer.ts  global.d.ts  scroll.ts
crates/shared/: Cargo.toml
crates/shared/src/: api.rs  lib.rs  sandbox.rs
deploy/: README.md  compose.example.yml
deploy/quadlet/: README.md  allowlist.txt  egress-proxy.container  gateway.container  gateway.example.env  gateway.volume  gitlab-mcp.container  gitlab-mcp.example.env  google-workspace-mcp.container  google-workspace-mcp.example.env  sandbox-egress.network  squid.conf
deploy/sandbox/: sandbox-runner.service  setup-sandbox.sh
deploy/sandbox-runner/: Containerfile
docs/: README.md  architecture.md  auth.md  cli.md  connectors.md  dependencies.md  dev-workflow.md  errors.md  gateway-api.md  roadmap.md  sandbox.md  testing.md  tool-context-optimization.md  tools-rbac.md  ui.md  upstreams.md
docs/images/: take-screenshots.mjs
e2e/: README.md  anonymous.test.mjs  api.test.mjs  authed.test.mjs  helpers.mjs
examples/typst-templates/letter/: template.toml  template.typ
sandbox-image/: Containerfile  noiou.c  sandbox-agent
ui/: package-lock.json  package.json  tsconfig.json
ui/src/: main.css
ui/ts/: app.ts  canvas.ts  clipboard.ts  feedback-annotator.ts  feedback-capture.ts  feedback.ts  geo.ts  global.d.ts  pcm-recorder.ts  voice-recorder.ts
ui/ts/chat/: actions.ts  mic.ts
