[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "gw"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
clap = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
webbrowser = { workspace = true }
jiff = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = "3"
